syntax = "proto3";

package proto;

option go_package = "accounts";
option (gogoproto.stable_marshaler_all) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message UserAccountData {
    uint64 Nonce            = 1 [(gogoproto.jsontag) = "nonce"];
    bytes   Balance         = 2 [(gogoproto.jsontag) = "balance,omitempty", (gogoproto.casttypewith) = "math/big.Int;github.com/multiversx/mx-chain-core-go/data.BigIntCaster"];
    bytes   CodeHash        = 3 [(gogoproto.jsontag) = "codeHash,omitempty"];
    bytes   RootHash        = 4 [(gogoproto.jsontag) = "rootHash,omitempty"];
    bytes   Address         = 5 [(gogoproto.jsontag) = "address,omitempty"];
    bytes   DeveloperReward = 6 [(gogoproto.jsontag) = "developerReward,omitempty", (gogoproto.casttypewith) = "math/big.Int;github.com/multiversx/mx-chain-core-go/data.BigIntCaster"];
    bytes   OwnerAddress    = 7 [(gogoproto.jsontag) = "ownerAddress,omitempty"];
    bytes   UserName        = 8 [(gogoproto.jsontag) = "userName,omitempty"];
    bytes   CodeMetadata    = 9 [(gogoproto.jsontag) = "codeMetadata,omitempty"];
}
